--- a/index.css
+++ b/index.css
@@ -21,7 +21,8 @@ body{
 
 .container{
     background: var(--container-bg);
-    width: 18rem;
+    width: 90%;
+    max-width: 18rem;
     padding: 1em 1em 1.5em;
     border-radius: 20px;
     box-shadow: 10px 10px 10px var(--container-shadow);
@@ -32,7 +33,7 @@ body{
 .container img{
     width: 100%;
     height: auto;
-    max-height: 288px;
+    max-height: 18rem;
     border-radius: 10px;
 }
 
@@ -44,13 +45,13 @@ body{
 
 
 .text-container h1{
-    color: var(--title-color);
+    color: var(--title-text-color);
     font-size: 22px;
     font-weight: 700;
 }
 
 .text-container p{
-    color: var(--paragraph-color);
+    color: var(--paragraph-text-color);
     font-size: 15px;
     font-weight: 400;
 }
